--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>waveanimation</title>
+    <link rel="stylesheet" href="./src/styles/reset.css">
   </head>
   <body>
     <div id="app"></div>
